--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -7,7 +7,7 @@
   "features": {
     "ghcr.io/devcontainers/features/git-lfs:1": {}
   },
-  "postCreateCommand": "pip install -r requirements.txt && git lfs pull",
+  "postCreateCommand": "git lfs pull",
   "customizations": {
     "vscode": {
       "extensions": [
